--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
-        "select2": "^4.0.13"
+        "@ttskch/select2-bootstrap4-theme": "^1.4.0",
+        "select2": "^4.0.13",
+        "select2-bootstrap-theme": "0.1.0-beta.10"
     }
 }
