--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/css/style.css": "/css/style.css",
     "/css/fontawesome.css": "/css/fontawesome.css",
     "/css/select2.css": "/css/select2.css",
+    "/css/select2-bootstrap4.css": "/css/select2-bootstrap4.css",
     "/js/jquery.js": "/js/jquery.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
     "/js/fontawesome.js": "/js/fontawesome.js",
